--- a/assets/sass/components/cards/_card_menu.scss
+++ b/assets/sass/components/cards/_card_menu.scss
@@ -27,6 +27,11 @@
                 white-space: nowrap;
                 overflow: hidden;
             }
+            >h3 {
+                text-overflow: ellipsis;
+                white-space: nowrap;
+                overflow: hidden;
+            }
         }
     }
     &__add_btn {
